Moved navbar to include folder, added an About page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-Polaroid of 
+<div class="jumbotron">
+        <div class="container">
+          <h1 class="display-2">Hello!</h1>
+          <p class="lead">Uses Flask and Bootstrap. Drop all issues in the <a href="https://github.com/abotiamnot/Mass-Emailing-App">Github repository</a> or email them to <a href="mailto:yatharthrai16@ducic.ac.in">Yatharth</a></p>
+        </div>
+</div>
 {% endblock %}
