--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,44 +18,13 @@
   </head>
 
   <body>
-
-    <header>
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-    </header>
-    <main role="main" class="container">
-          <h1 class="mt-5">A Simple Webapp For Bulk Emails</h1>
-          <p class="lead">Uses Flask and Bootstrap. Drop all issues in the <a href="https://github.com/abotiamnot/Mass-Emailing-App">Github repository</a> or email them to <a href="mailto:yatharthrai16@ducic.ac.in">Yatharth</a></p>
-        </main>
-
+    {% include 'includes/navbar.html' %}
+    {% block body %}{% endblock %}
     <footer class="footer">
       <div class="container">
         <span class="text-muted">Developed by Cluster Innovation Centre (Class of '17)</span>
       </div>
     </footer>
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
