Some other major changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,3 +7,5 @@
     <img src="https://lh3.googleusercontent.com/KceOJz-FGAnGh9iPh86Y7yesCvHzTUPJPE5X0Xdlg2RJMx-mEsxPdft4yA4x5E7UyPMKlHdm-ZP9MWlelJv4pKaBv-kDvRmfHzHTXSbMtmsypy-YxjWH-zHJNwmA6lfkJCCWL8kdr8xoPOcTCxPtj-aFJR8FEJH6xtAQKiqACS0e4WxPfmtjiZwnT86DZs9IF3fmD_jbrRA5cVmYDK4yBd4glYB4oLAdwfJ_EpnQ03NvSDWGb-J5No3UMzVR_lLtnNS7uOXRFYU3xAJMHSJNk19hjd9V0gV6cRg0slM1mfs1zITFw7bfdbEkPVU_XM7d1ZLG_D4tzXrcsvU78XtHhdTiTplxUEy0RtdsK-TvlmIy0PNJrqO4PNuQH6CbLLaEISBED8Iq0HgxEQRJAMv1KY2j6CFti0T8PJpDr-I7WfzJuY7XWT26gZZaCsyO50da7CWT0QtqH2w34cKy-0Qu5rjd0RksFpvxA_0OrLKwsmsW8O06cNvFbaa_dbh464-eoKS1R4UdTIyYHjXDDwynY0RF8WUhKN6WsU8HSyutOD8udZVB5iWWcdaOXIM3VmoRWfAQnR9NPwb_U-ReiCtYK1xhtCqB_lHM3-BVvw=w1213-h909-no">
 </main>
 {% endblock %}
+
+<!-- We hated how hostile everyone was to us, because apparently, watching Python tutorials is gaming haha>
