--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A webapp developed by Cluster Innovation Centre for National Innovation Foundation :)">
-    <meta name="author" content="Yatharth Rai, using Boostrap Examples">
+    <meta name="author" content="Yatharth Rai, using Bootsrap Examples">
     <link rel="icon" href="http://ducic.ac.in/assets/images/favicon/favicon.ico">
 
     <title>Bulk Email</title>
@@ -20,6 +20,11 @@
   <body>
     {% include 'includes/navbar.html' %}
     {% block body %}{% endblock %}
+  </body>
+  <body>
+    <style>
+    {position: absolute;}
+    </style>
     <footer class="footer">
       <div class="container">
         <span class="text-muted">Developed by Cluster Innovation Centre (Class of '17)</span>
