Added a form-control-file to accept list of emails

--- a/templates/sendmail.html
+++ b/templates/sendmail.html
@@ -18,6 +18,10 @@ padding-left: 50px;">
   <textarea class="form-control" id="emailMessage" rows="10" placeholder="Dear Yatharth"></textarea>
 </div>
 <div class="form-group">
+  <label for="FormControlFile1">List of Emails (.CSV)</label>
+  <input type="file" class="form-control-file" id="email_list">
+</div>
+<div class="form-group">
   <label for="FormControlFile1">Attachment</label>
   <input type="file" class="form-control-file" id="attachment_">
 </div>
