Edited some front end, fixed back-end, some missing features remain

--- a/templates/extractmail.html
+++ b/templates/extractmail.html
@@ -1,10 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<form>
-  <div class="form-group" style="padding-top: 100px; padding-left: 100px;">
+<form action="/extractmail" method="POST">
+  <div class="col-md-4 text-left" style="padding-top: 100px; padding-left: 87px; padding-bottom: 30px;">
     <label for="exampleFormControlFile1">Choose the .TXT file</label>
-    <input type="file" class="form-control-file" id="search_email">
+    <input type="file" class="form-control-file" id="search_email" name="file_to_extract_from">
   </div>
+  <div class="col-md-2 text-center">
+    <button type="submit" class="btn btn-primary" style="padding-top: 5px;">Submit</button>
+</div>
 </form>
 {% endblock %}
