--- a/templates/sendmail.html
+++ b/templates/sendmail.html
@@ -1,29 +1,37 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<form style="padding-top: 100px;
+<form  action="/sendmail" method="POST" style="padding-top: 100px;
 padding-left: 50px;">
   <div class="form-row">
     <div class="form-group col-md-4">
       <label for="inputEmail">Your Email Address</label>
-      <input type="email" class="form-control" id="inputEmail" placeholder="yatharthrai16@ducic.ac.in">
+      <input type="email" class="form-control" id="inputEmail" placeholder="yatharthrai16@ducic.ac.in" name="senderemail">
     </div>
     <div class="form-group col-md-4">
       <label for="inputPassword">Your Password</label>
-      <input type="password" class="form-control" id="inputPassword" placeholder="What's My Password?">
+      <input type="password" class="form-control" id="inputPassword" placeholder="What's My Password?" name="senderpassword">
     </div>
+  </div>
+  <div class="form-group col-md-4" style="padding-left: 2px;">
+    <label for="inputSubject">Subject</label>
+    <input type="text" class="form-control" id="inputPassword" placeholder="Enter Subject" name="emailsubject">
   </div>
   <div class="form-group col-md-11" style="padding-left: 2px;">
   <label for="TextArea">Email To Send</label>
-  <textarea class="form-control" id="emailMessage" rows="10" placeholder="Dear Yatharth"></textarea>
+  <textarea class="form-control" id="emailMessage" rows="10" placeholder="Dear Yatharth" name="emailcontent"></textarea>
+</div>
+<div class="form-group col-md-4" style="padding-left: 2px;">
+  <label for="inputEmail">Single Email</label>
+  <input type="email" class="form-control" id="inputPassword" placeholder="Enter Recipient's Email" name="recipientemail">
 </div>
 <div class="form-group">
   <label for="FormControlFile1">List of Emails (.CSV)</label>
-  <input type="file" class="form-control-file" id="email_list">
+  <input type="file" class="form-control-file" id="emaillist">
 </div>
 <div class="form-group">
   <label for="FormControlFile1">Attachment</label>
-  <input type="file" class="form-control-file" id="attachment_">
+  <input type="file" class="form-control-file" id="attachment_" name="emailattachment">
 </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
