Can now send bulk emails using TXT and CSV files

--- a/templates/sendmail.html
+++ b/templates/sendmail.html
@@ -14,6 +14,10 @@ padding-left: 50px;">
     </div>
   </div>
   <div class="form-group col-md-4" style="padding-left: 2px;">
+    <label for="inputSender">Send As</label>
+    <input type="text" class="form-control" id="inputPassword" placeholder="Yatharth Rai" name="sendertitle">
+  </div>
+  <div class="form-group col-md-4" style="padding-left: 2px;">
     <label for="inputSubject">Subject</label>
     <input type="text" class="form-control" id="inputPassword" placeholder="Enter Subject" name="emailsubject">
   </div>
@@ -26,8 +30,8 @@ padding-left: 50px;">
   <input type="email" class="form-control" id="inputPassword" placeholder="Enter Recipient's Email" name="recipientemail">
 </div>
 <div class="form-group">
-  <label for="FormControlFile1">List of Emails (.CSV)</label>
-  <input type="file" class="form-control-file" id="emaillist">
+  <label for="FormControlFile1">List of Emails (.CSV or .TXT)</label>
+  <input type="file" class="form-control-file" id="emaillist" name="emaillist">
 </div>
 <div class="form-group">
   <label for="FormControlFile1">Attachment</label>
