Made some changes, no more working!

--- a/templates/sendmail.html
+++ b/templates/sendmail.html
@@ -27,7 +27,7 @@ padding-left: 50px;">
 </div>
 <div class="form-group col-md-4" style="padding-left: 2px;">
   <label for="inputEmail">Single Email</label>
-  <input type="email" class="form-control" id="inputPassword" placeholder="Enter Recipient's Email" name="recipientemail">
+  <input type="email" class="form-control" id="recipientsemail" placeholder="Compulsory, Even if TXT or CSV is attached" name="recipientemail">
 </div>
 <div class="form-group">
   <label for="FormControlFile1">List of Emails (.CSV or .TXT)</label>
